--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   },
   "defaultLocale": "en",
   "private": true,
-  "location": "ticket_sidebar",
+  "location": ["new_ticket_sidebar", "ticket_sidebar", "top_bar"],
   "version": "1.0",
   "frameworkVersion": "1.0",
   "parameters":[
     {
-      "name" : "sender",
+      "name" : "sender", // What is this used for?
       "type" : "text",
       "required" : "true"
     },
