--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Broadcast it!",
+  "name": "Broadcast App",
   "author": {
     "name": "Abel Martin Romero",
     "email": "aromero@zendesk.com",
