--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,11 @@
       "name" : "view_id",
       "type" : "text",
       "required" : "false"
+    },
+    {
+      "name" : "admin_group",
+      "type" : "text",
+      "required" : "true"
     }
   ]
 }
